turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: not found: value R
  rule = Array( Array( Array(1,R,0), Array(1,R,1) )Array( Array(0,N,0), Array(0,N,1) ) )
                               ^Turmite:48: error: not found: value R
  rule = Array( Array( Array(1,R,0), Array(1,R,1) )Array( Array(0,N,0), Array(0,N,1) ) )
                                             ^Turmite:48: error: not found: value N
  rule = Array( Array( Array(1,R,0), Array(1,R,1) )Array( Array(0,N,0), Array(0,N,1) ) )
                                                                  ^Turmite:48: error: not found: value N
  rule = Array( Array( Array(1,R,0), Array(1,R,1) )Array( Array(0,N,0), Array(0,N,1) ) )
                                                                                ^